Fix button clicks on IE11, allow modal to be closed even if Swiper has failed

--- a/projects/plugins/jetpack/modules/carousel/jetpack-carousel.css
+++ b/projects/plugins/jetpack/modules/carousel/jetpack-carousel.css
@@ -966,7 +966,7 @@ textarea#jp-carousel-comment-form-comment-field:focus::-webkit-input-placeholder
 	background-color: #000;
 	border: none;
 	border-radius: 2px;
-	cursor: pointer;
+	pointer-events: none;
 	font-family: dashicons;
 	display: inline-block;
 	width: 32px;
